z-index correction

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ input {
   display      : flex;
   margin-bottom: 3vh;
   position     : relative;
-  z-index      : -1;
+  z-index      : 0;
 }
 
 .inputValue {
